refator(docs): removed unused log and generate new docs
